-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta2
-
None
-
-
95603e09c9 (qt/qtbase/dev) 95603e09c9 (qt/tqtc-qtbase/dev) 62f9c53591 (qt/qtbase/6.3) 62f9c53591 (qt/tqtc-qtbase/6.3) 62f9c53591 (qt/tqtc-qtbase/6.3.0)
A simple
QApplication a(argc, argv); QPrintPreviewDialog d; d.exec();
asserts
ASSERT: "!(P(max) < P(min))" in file src/corelib/global/qglob 1051
manifested in Qt for Python testing.