Fix assert showing default-constructed QPrintPreviewDialog

Fix call to qBound(), avoiding an assert introduced
by ad5c5bb541ae20a205ac07122153b302dee1d3e1.

Fixes: QTBUG-101297
Change-Id: I823cdfcd2491c6bb4c87058318479d188ca38742
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 95603e09c9b7e552239044c4ce7d79ec1bc7467d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>